--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.18",
-    "astro": "^5.16.8",
-    "tailwindcss": "^4.1.18"
+    "astro": "^5.1.0",
+    "@astrojs/tailwind": "^6.0.0",
+    "tailwindcss": "^3.4.17"
   }
 }
