--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.0",
     "@astrojs/tailwind": "^6.0.0",
-    "tailwindcss": "^3.4.17"
+    "@tailwindcss/postcss": "^4.1.18",
+    "astro": "^5.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   }
 }
